--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <body>
    <table cellspacing="20">
       <tr>
-         <td><img src="https://github.com/Patramanish54/cv/blob/main/ManishPicture.jpg?raw=true" alt="Manish patra Profile Picture" height="400" width="300"></td>
+         <td><img src="images/ManishPicture.jpg" alt="Manish patra Profile Picture" height="400" width="300"></td>
          <td> <h1>Manish Patra</h1>
        <p>I Am A JEE Second Dropper.And I Love Sports...I Love Writting In Quora.Here Is <strong><a href="https://www.quora.com/profile/Manish-Patra-26">My Profile</a></strong></p></td>
       </tr>
